# CopyTrack

./: .gitignore  ARCHITECTURE.md  NEXT.md  README.md  README.ru.md  RELEASE.md  RESEARCH.md  SYNC.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: macos-release.yml
docs/: ONBOARDING.md  QA.md  SIGNING.md
docs/releases/: v1.0.0.md
openspec/changes/design-clipboard-history-app/: design.md  proposal.md  tasks.md
openspec/changes/design-clipboard-history-app/specs/clipboard-capture/: spec.md
openspec/changes/design-clipboard-history-app/specs/data-portability-sync/: spec.md
openspec/changes/design-clipboard-history-app/specs/history-management/: spec.md
openspec/changes/design-clipboard-history-app/specs/product-discovery-questionnaire/: spec.md
openspec/changes/design-clipboard-history-app/specs/quick-access-ui/: spec.md
openspec/changes/design-clipboard-history-app/specs/search-filtering/: spec.md
openspec/changes/design-clipboard-history-app/specs/settings-permissions/: spec.md
scripts/: verify-macos-release.sh
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/platform/: macos.rs
src-tauri/src/tray/: mod.rs
src/app/: api.ts  mockData.ts
src/shared/: i18n.ts
src/shared/lib/: history.test.ts  history.ts
src/shared/types/: history.ts
